kubernetes/neo/apps/istio-gateways/ingress-gateway/gateways/default-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "*.abasitt.tech"
    protocol: HTTP
    port: 80
  - name: https
    hostname: "*.abasitt.tech"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: abasitt-tech-secret
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: default
