kubernetes/neo/apps/istio-gateways/ingress-gateway/gateways/external-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
spec:
  addresses:
  - value: istio-ingressgateway.istio-gateways.svc.cluster.local
    type: Hostname
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "*.${PUBLIC_DOMAIN}"
    protocol: HTTP
    port: 80
  - name: https
    hostname: "*.${PUBLIC_DOMAIN}"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: abasitt-tech-secret
    allowedRoutes:
      namespaces:
        from: All
