kubernetes/neo/apps/istio-gateways/ingress-gateway/gateways/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gw
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: abasitt-tech-secret # must be the same as secret
    hosts:
    - "*.abasitt.tech"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.abasitt.tech"
